# pycards

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-package.yml
pycards/: __init__.py  core.py  poker.py
tests/: test_core.py  test_poker.py
